tests/errors/sem_test_03.py
# sem_test3.py
def main():
    x = "hello"
    y = 5
    z = x - y
    print(z)

main()
